# jelly-downloader

./: .gitignore  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader_thread.rs  lib.rs  main.rs
src/lib/: DownloadForm.svelte  DownloadList.svelte  Greet.svelte
