[package]
name = "jelly-downloader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.14", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.21", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.30"
tauri-plugin-dialog = "2.0.0-alpha.7"
tauri-plugin-http = "2.0.0-alpha.9"
tauri-plugin-shell = "2.0.0-alpha.3"
tauri-plugin-fs = "2.0.0-alpha.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
